# tsukuyomi-rs

./: .gitignore  ARCHITECTURE.d2  Cargo.toml  DEVELOPER.md  LICENSE  README.md  cargo.toml
.github/workflows/: build.yml  rust.yml
core/: Cargo.toml  README.md  sample.qxw
core/gemini/: 251001_rs.md  251013.md  251014_tk.md  gemini_log.md  gemini_share_250929.md
core/notes/: DONE.md  TODO.md  TechSelection.md  memo.md
core/src/: command_manager.rs  commands.rs  doc.rs  engine.rs  fixture.rs  fixture_def.rs  functions.rs  lib.rs  plugins.rs  qxw_loader.rs  universe.rs
core/src/commands/: doc.rs  doc_commands.rs
core/src/doc/: errors.rs
core/src/doc/tests/: address_index.rs  current_max_address.rs  events.rs  fixture_defs.rs  fixtures.rs  functions.rs  helpers.rs  resolve.rs  universe_outputs.rs
core/src/functions/: chaser.rs  collection.rs  fader.rs  mod.rs  scene.rs  static_scene.rs  timeline.rs
core/src/plugins/: artnet.rs  stdout.rs
core/tests/: engine.rs
slint/: Cargo.toml  build.rs
slint/scripts/: slint_tr_extractor_batch.py
slint/src/: doc_event_bridge.rs  fader_view_bridge.rs  lib.rs  main.rs  preview_2d.rs  preview_plugin.rs
slint/translations/: messages.pot
slint/ui/: app-window.slint  fixtures-tab.slint  functions-tab.slint  styling.slint  timeline-tab.slint  top-bar.slint  virtual-console-tab.slint
slint/ui/parts/: splitter.slint  texts.slint  tk-text.slint  tooltip.slint
slint/ui/views/: faders-view.slint  fixture-list-view.slint  function-view.slint  preview-2d.slint  timeline-view.slint  universe-view.slint
ui/: Cargo.toml  architecture_refactor.md  build.rs  modeling.mmd
ui/slint/: app-window.slint  editor-tab.slint  fixtures-tab.slint  global-state.slint  left-side-bar.slint  panel-left.slint  side-bar.slint  styling.slint  timeline-tab.slint  titlebar.slint  top-bar.slint
ui/slint/containers/: fixture-def-panel.slint
ui/slint/views/: faders-view.slint  fixture-list-view.slint  fixture-single-view.slint  fixture-view.slint  preview-2d.slint  preview-3d.slint  universe-view.slint
ui/src/: bottom_panel_bridge.rs  colors.rs  controllers.rs  doc_event_bridge.rs  fixture_list_view.rs  hashmap_model.rs  lib.rs  main.rs  preview_2d.rs  preview_3d.rs  universe_view.rs
ui/src/controllers/: fader_view_bridge.rs  fixture_list_view.rs  preview_3d.rs  universe_view.rs
ui/translations/ja_JP/: tsukuyomi-ui.mo
ui/translations/ja_JP/LC_MESSAGES/: tsukuyomi-slint.po
