[package]
name = "tsukuyomi-slint"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { path = "../../slint/api/rs/slint" }
tsukuyomi-core={ path="../core" }

[build-dependencies]
slint-build = { path="../../slint/api/rs/build" }
