[package]
name = "tsukuyomi-ui"
version = { workspace=true }
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsukuyomi-core = { path="../core" }

slint = { version="1.14.1", features = ["backend-winit"] }
i-slint-backend-winit = "1.14.1"

uuid = { workspace=true }
tracing = { workspace=true }
tracing-subscriber = "0.3.0"

[build-dependencies]
slint-build = { path="../../slint/api/rs/build" }

[patch.crates-io]
slint = { path = "../../slint/api/rs/slint", features = ["backend-winit"] }
i-slint-backend-winit = { path = "../../slint/internal/backends/winit" }
