[package]
name = "tsukuyomi-ui"
version = { workspace=true }
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsukuyomi-core = { path="../core" }

slint = { workspace=true }
i-slint-backend-winit = { workspace=true }

uuid = { workspace=true }
tracing = { workspace=true }
tracing-subscriber = "0.3.0"

[build-dependencies]
slint-build = { workspace=true }
